# sight-server-application

./: README.md
doc/arch/: arch.drawio
doc/sight-service/api/: followers.pu  story.pu
doc/sight-service/service/: error_codes  service-model.drawio
doc/sight-service/storage/: mongo.drawio
src/scraper/instagram/: account_manager.py  app.py  config.py  gram-scraper.service  gram.py  gram_manager.py  mongo_client.py  requirements.txt
src/scraper/instagram/example/followers/: get_followers.json  get_following.json
src/scraper/instagram/example/raw/: private-follower-session.chls  public-follower-session.chls
src/scraper/instagram/example/story/: download_stories.json  get_stories.json
src/scraper/instagram/scripts/: accounts.json  accounts.py
src/sight-service/: CMakeLists.txt
src/sight-service/cmake/: dependencies.cmake
src/sight-service/src/: CMakeLists.txt
src/sight-service/src/sandbox/: CMakeLists.txt
src/sight-service/src/sandbox/flask/: client.py
src/sight-service/src/sandbox/grpc/: CMakeLists.txt
src/sight-service/src/sandbox/grpc/follower/: CMakeLists.txt  grpcurl.sh  main.cpp
src/sight-service/src/sandbox/grpc/story/: CMakeLists.txt  grpcurl.sh  main.cpp
src/sight-service/src/sandbox/logging/: CMakeLists.txt  main.cpp
src/sight-service/src/sandbox/mongo/: CMakeLists.txt  autofill.txt  main.cpp  mongo-test.cpp
src/sight-service/src/sandbox/worker/: CMakeLists.txt  manager.cpp  worker.cpp
src/sight-service/src/service/: CMakeLists.txt
src/sight-service/src/service/common/: CMakeLists.txt
src/sight-service/src/service/common/logging/: Logger.hpp
src/sight-service/src/service/server/follower/: CMakeLists.txt
src/sight-service/src/service/server/follower/private/: FollowerServerImpl.cpp
src/sight-service/src/service/server/follower/proto/: CMakeLists.txt
src/sight-service/src/service/server/follower/proto/follower/v1/: follower.proto
src/sight-service/src/service/server/follower/public/: FollowerServer.hpp  FollowerTypes.hpp
src/sight-service/src/service/server/story/: CMakeLists.txt
src/sight-service/src/service/server/story/private/: StoryServerImpl.cpp
src/sight-service/src/service/server/story/proto/: CMakeLists.txt
src/sight-service/src/service/server/story/proto/story/v1/: story.proto
src/sight-service/src/service/server/story/public/: StoryServer.hpp  StoryTypes.hpp
src/sight-service/src/service/service/: CMakeLists.txt
src/sight-service/src/service/service/common/: CMakeLists.txt
src/sight-service/src/service/service/common/manager/: TaskManager.hpp  Time.hpp
src/sight-service/src/service/service/common/worker/: Worker.hpp
src/sight-service/src/service/service/follower/: CMakeLists.txt  main.cpp  sight-follower.service
src/sight-service/src/service/service/follower/aggregator/: CMakeLists.txt  FollowerAggregator.cpp  FollowerAggregator.hpp
src/sight-service/src/service/service/follower/resolver/: CMakeLists.txt  FollowerResolver.cpp  FollowerResolver.hpp
src/sight-service/src/service/service/follower/scraper/: CMakeLists.txt  FollowerScraperClient.cpp  FollowerScraperClient.hpp  FollowerScraperTypes.hpp
src/sight-service/src/service/service/follower/storage/: CMakeLists.txt  FollowerStorage.cpp  FollowerStorage.hpp
src/sight-service/src/service/service/storage/: CMakeLists.txt
src/sight-service/src/service/service/storage/base/: CMakeLists.txt  StorageClient.hpp  StorageCreator.hpp  StorageObject.hpp  StorageTypes.hpp
src/sight-service/src/service/service/storage/mongo/: CMakeLists.txt  MongoClient.cpp  MongoClient.hpp  MongoCreator.cpp  MongoCreator.hpp  MongoObject.cpp  MongoObject.hpp
src/sight-service/src/service/service/story/: CMakeLists.txt  main.cpp  sight-story.service
src/sight-service/src/service/service/story/aggregator/: CMakeLists.txt  StoryAggregator.cpp  StoryAggregator.hpp
src/sight-service/src/service/service/story/resolver/: CMakeLists.txt  StoryResolver.cpp  StoryResolver.hpp
src/sight-service/src/service/service/story/scraper/: CMakeLists.txt  StoryScraperClient.cpp  StoryScraperClient.hpp  StoryScraperTypes.hpp
src/sight-service/src/service/service/story/storage/: CMakeLists.txt  StoryStorage.cpp  StoryStorage.hpp
